--- a/myapp/message_app/templates/header.html
+++ b/myapp/message_app/templates/header.html
@@ -6,7 +6,7 @@
             <a href="{% url 'message_app:create' %}">Create a message</a>
         </li>
         <li>
-            <a href="">Do nothing 1</a>
+            <a href="{% url 'message_app:messages' %}">Message list</a>
         </li>
         <li>
             <a href="">Do nothing 2</a>
@@ -15,7 +15,7 @@
             <a href="">Do nothing 3</a>
         </li>
         <li style="float:right">
-            <a href="">Do nothing 4</a>
+            <a href="">Logout</a>
         </li>
 
     </ul>
