--- a/myapp/message_app/templates/messages.html
+++ b/myapp/message_app/templates/messages.html
@@ -1,5 +1,6 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" href="{% static 'message.css' %}">
 
  <div id='header' class="module">{% include "header.html" %}</div>
 {% if form %}
