--- a/myapp/message_app/static/style.css
+++ b/myapp/message_app/static/style.css
@@ -2,91 +2,39 @@ body {
     width: 75%;
 }
 
-.sub_title {
-    margin-top: 0px;
-}
-
 h2 {
     position: relative;
     padding: 0;
     margin: 0;
     font-family: "Raleway", sans-serif;
-    font-weight: 300;
+    font-weight: 600;
     font-size: 35px;
     color: #080808;
-    -webkit-transition: all 0.4s ease 0s;
-    -o-transition: all 0.4s ease 0s;
-    transition: all 0.4s ease 0s;
-  }
-  
-  h2 span {
-    display: block;
-    font-size: 0.5em;
-    line-height: 1.3;
-  }
-  h2 em {
+}
+
+h2.sub_title {
     font-style: normal;
-    font-weight: 400;
-  }
-  
-  .sub_title h2 {
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
     padding-bottom: 5px;
-  }
+    margin-top: 0px;
+    font-size: 30px;
+}
 
 .module {
     border: 1px solid gray;
     border-radius: 3px;
     padding: 15px;
     margin: 5px;
+    width: 75%;
 }
 
-li.message {
-    border: thick double black;
-    margin: 6px;
+.container {
+    padding-left: 20px;
 }
 
-.time {
-    background-color: lightgreen;
-    padding-left: 5px;
-}
-.messageContent {
-    height: 5%;
-    padding-left: 10px;
-}
-
-.messageUl {
-    list-style-type: none;
-    padding-left: 0px;
-}
-
-ul.lowerButton {
-    border-top: 1px dotted black;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: lightgreen;
-}
-
-ul.lowerButton li {
-    float: left;
-    padding: 5px 6px;
-}
-
-ul.lowerButton li:hover {
-    background-color: ghostwhite;
-}
-
-ul.lowerButton li a {
+.back_button {
     display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    color: black;
-}
-
-.backButton {
     color:black;
     border: 1px solid black;
     list-style-type: none;
@@ -96,65 +44,18 @@ ul.lowerButton li a {
     background-color: lightgreen;
     padding: 5px 6px;
     text-decoration: none;
-    height: 25px;
     border-radius: 3px;
 }
 
-.backButton:hover {
+.back_button:hover {
     background-color: ghostwhite;
 }
 
-form {
-    display: block;
-    margin-top: 0em;
-    margin-bottom: 0em;
-}
-
-label {
-    cursor: default;
-}
-
-input[type=text] {
-    width: 100%;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-shadow: inset 0 1px 3px #ddd;
-    border-radius: 4px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-}
-
-input.author{
-    width: 15em;
-}
-
-input.content{
-    width: 66%;
-}
-
-.container {
-    padding-left: 20px;
-}
-
-.bottomRow {
+.bottom_row {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-table {
-    width: 100%;
-    border-collapse: collapse; 
-}
-tr {
-    border-top: 1px dotted black;
-    border-bottom: 1px dotted black;
-}
 
-.details {
-    margin: 15px;
+#right_button {
+    float: right;
 }
