--- a/myapp/message_app/templates/message_form.html
+++ b/myapp/message_app/templates/message_form.html
@@ -16,7 +16,6 @@
         </tr>
     </table>
     <div class="bottom_row">
-        <button class="back_button" onclick="location.href = '/message-app'">Close</button>
-        <input id="right_button" class="back_button" type="submit" value="Create a message">
+        <button class="right_button back_button submit_button" type="submit">Send</button>
     </div>
 </form>
