--- a/myapp/message_app/static/form.css
+++ b/myapp/message_app/static/form.css
@@ -24,7 +24,23 @@ input[type=text] {
     padding-bottom: 12px;
 }
 
-input.author{
+input[type=password] {
+    width: 100%;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 3px #ddd;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+}
+
+input.short{
     width: 15em;
 }
 
@@ -34,5 +50,41 @@ table {
 }
 
 td.first_td {
-    width: 10%;
+    width: 12%;
+    padding-right: 10px
+}
+
+.error_message {
+    margin: 5px;
+    background-color: lightcoral;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box_left {
+    width: 50%;
+}
+
+.box_right {
+    width: 50%;
+}
+
+.information_box {
+    margin: 5px;
+    background-color: lightcyan;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.submit_button {
+    width: 100px; 
+    height: 25px; 
+    font-family: Verdana, sans-serif; 
+    font-size: 15px;
 }
