--- a/myapp/message_app/templates/header.html
+++ b/myapp/message_app/templates/header.html
@@ -1,17 +1,46 @@
-{% load static %}
-<link rel="stylesheet" href="{% static 'header.css' %}">
-<div class="context-bar">
-    <ul class="horizontal">
-        <li>
-            <a href="{% url 'message_app:messages' %}">Message list</a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/navbar-fixed/">
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+        }
+
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        } 
+
+        body {
+            min-height: 75rem;
+            padding-top: 4.5rem;
+        }
+    </style>
+  </head>
+  <body>
+    
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="">Chatbox</a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="">Messages</a>
         </li>
-        <div style="float:right">
-            <li>
-                <a href="{% url 'login_app:user_details' user_id %}">See my profile</a>
-            </li>
-            <li>
-                <a href="{% url 'login_app:login' %}">Logout</a>
-            </li>
-        </div>
-    </ul>
-</div>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'login_app:user_details' connected_user %}">My profile</a>
+        </li>
+      </ul>
+      <li class="d-flex">
+        <a style="color: white;" class="nav-link btn btn-outline-danger" href="{% url 'login_app:login' %}">Logout</a>
+        </li>
+    </div>
+  </div>
+</nav>
