--- a/myapp/login_app/templates/register.html
+++ b/myapp/login_app/templates/register.html
@@ -29,7 +29,7 @@
             align-items: center;
             padding-top: 40px;
             padding-bottom: 40px;
-            background-color: #f5f5f5;
+            background-color: white;
         }
 
         .form-signin {
@@ -56,12 +56,12 @@
         }
 
         .form-signin input[type="password"] {
-            margin-bottom: 10px;
+            margin-bottom: -1px;
             border-top-left-radius: 0;
             border-top-right-radius: 0;
         }
         .red-button {
-            margin-bottom: 10px;
+            margin-top: 10px;
         }
         .red-button:hover {
             background-color: white;
@@ -73,6 +73,9 @@
             height: 60px;
             text-align: center;
             text-decoration: underline overline black;
+        }
+        .alert {
+            margin-top: 10px;
         }
     </style>
   </head>
