--- a/myapp/message_app/static/message_box.css
+++ b/myapp/message_app/static/message_box.css
@@ -127,6 +127,7 @@ img{ max-width:100%;}
   font-size: 15px;
   min-height: 48px;
   width: 100%;
+  padding-left: 15px;
 }
 
 .type_msg {border-top: 1px solid #c4c4c4;position: relative;}
