--- a/myapp/message_app/templates/message_user.html
+++ b/myapp/message_app/templates/message_user.html
@@ -22,7 +22,7 @@
         <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
         <div class="chat_ib">
           <h5>{{ active_target.target }}</h5>
-          <p>{{ active_target.message }}</p>
+          <p>{{ active_target.message.content }}</p>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
           <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
           <div class="chat_ib">
             <h5>{{ unactive_target.target }}</h5>
-            <p>{{ unactive_target.message }}</p>
+            <p>{{ unactive_target.message.content }}</p>
           </div>
         </div>
       </div>
